Code smells fix part1 - low smells